# regression-markets

./: .gitignore  README.md  config.py  config.yml  main.py  pyproject.toml  requirements.txt
allocation/: model.py  policy.py  state.py
analytics/: computation_time.ipynb  helpers.py  review_rebuttal.md  reviews.md  sample-shapy.py  sim00-basis-functions.md  sim00-basis-functions.py  sim01-visualizing-uncertainty.md  sim01-visualizing-uncertainty.py  sim02-blr.py  sim02-quantifying-uncertainty.md  sim02-quantifying-uncertainty.py  sim022-bayesian-linear-regression.py  sim03-nonstationary-processes.md  sim03-nonstationary-processes.py  sim03-quantifying-uncertainty.py  sim04-negative-log-likelihood-ratio.md  sim04-negative-log-likelihood-ratio.py  sim05-nonstationary-processes.py  sim05-visualizing-revenue.md  sim05-visualizing-revenue.py  sim06-sensitivity-analysis.py  sim06-visualizing-revenue.py  sim07-online-market.py  sim08-solar-pecd.py  sim09-manifold-plot.py  sim09-solar-pecd.py  sim10-model-and-data-centric.py  sim10-south-carolina.py  sim11-interventional-risk.py  sim12-south-carolina.py  sim13-capricious-data-streams.py  sim13-data_streams.ipynb  sim13-parallel.py  sim13-replication-robust.ipynb  sim13-sample-shapley.py  sim13-shapley-approx.py  sim14-sample-shapley-real.py  sim14-south-carolina.py  sim2.py  (+2 more)
cases/: __init__.py  case0.md  case0.py  run.py
common/: log.py  objective.py  plot.py  utils.py
data/: south_carolina.py  synthetic.py
data/docs/: sc_wind_sites.csv
market/: basis.py  data.py  impute.py  mechanism.py  policy.py  task.py
(+24 files in other folders)
