[project]
name = "regression-markets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "joblib>=1.5.1",
    "matplotlib<=3.9.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "tfds>=0.3",
    "tqdm>=4.67.1",
]
